styles/about.css
.main-content > * {
  margin: 5em 0;
}

.group-div {
  width: 100%;
  height: 45em;
}

.group-div img {
  display: block;
  margin: auto auto;
  height: 95%;
  border: 2px solid black;
  border-radius: 5px;
}

.person-grid {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
  align-items: center;
  justify-content: center;
}

#person-checker {
  display: none;
}

.person-container {
  width: 15em;
  height: 25em;
  padding: 1em;
  border: 2px solid black;
  border-radius: 5px;
  text-align: center;
  transition: ease-out 0.5s;
  margin: 1em;
}

.person-container > * {
  transition: inherit;
  transition-delay: .15s;
}

.person-container img {
  display: block;
  margin: auto auto;
  width: 13em;
  border-radius: 5px;
}

.person-container p {
  background-color: none;
  height: 0;
  overflow: hidden;
}

.person-container-checked {
  background-color: grey;
  width: 20em;
  height: 35em;
}

/*.person-container-checked > * {
  background-color: grey;
}*/

.person-container-checked p {
  height: 12em;
}

.person-container-leader {
  border-color: goldenrod;
}

.person-container-checked.person-container-leader {
  background-color: gold;
}

